make install os x friendly

--- a/install
+++ b/install
@@ -4,13 +4,14 @@ colorfile="https://raw.githubusercontent.com/CrashenX/\
 vim-vividchalk/master/colors/vividchalk.vim"
 pathogen_path=${HOME}/src/vim/
 from_path=$(dirname $0)
-vimrc_path=$(realpath $from_path/vimrc)
+vimrc_path=$(realpath $from_path/vimrc || grealpath $from_path/vimrc)
 req_path=$(realpath $from_path/requirements)
 
 wget -NP /tmp/ $colorfile
 
-install -vD -m 400 $vimrc_path ${HOME}/.vimrc || exit 1
-install -vD -m 400 /tmp/vividchalk.vim \
+install -v -m 400 $vimrc_path ${HOME}/.vimrc || exit 1
+mkdir -p ${HOME}/.vim/colors/
+install -v -m 400 /tmp/vividchalk.vim \
     ${HOME}/.vim/colors/vividchalk.vim || exit 1
 
 if [[ -e $pathogen_path ]]
