--- a/install
+++ b/install
@@ -4,8 +4,21 @@ from_path=$(dirname "$0")
 vimrc_path=$(realpath "$from_path/vimrc" || grealpath "$from_path/vimrc")
 req_path=$(realpath "$from_path/requirements")
 
-mkdir -p "${HOME}/.config/nvim"
+echo "Installing plug.vim ..."
+curl -fLo "$HOME/.local/share/nvim/site/autoload/plug.vim" --create-dirs \
+    'https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim'
+
+echo mkdir -p "${HOME}/.config/nvim" || exit 1
+mkdir -p "${HOME}/.config/nvim" || exit 1
+
 echo install -v -m 400 "$vimrc_path" "${HOME}/.vimrc" || exit 1
 install -v -m 400 "$vimrc_path" "${HOME}/.config/nvim/init.vim" || exit 1
+
+echo "Installing python3 ..."
+brew install python3 || exit 1
+
+echo "Installing pynvim ..."
+pip3 install --upgrade pip
+pip3 install pynvim
 
 exit 0
